--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,11 +29,26 @@
     border: 3px solid red;
     background-color: white;
 }
+
+.charBox3{
+    height: 170px;
+    width: 200px;
+    padding: 10px;
+    margin: 5px;
+    border: 3px solid red;
+    background-color: black;
+}
 .charName{
     font-family: 'Oswald', sans-serif;
     margin: 0 auto;
     text-align: center;
     color: black;
+}
+.charName2{
+    font-family: 'Oswald', sans-serif;
+    margin: 0 auto;
+    text-align: center;
+    color: white;
 }
 #charSelect{
     font-family: 'Oswald', sans-serif;
@@ -44,6 +59,12 @@
     margin: 0 auto;
     text-align: center;
     color: black;
+}
+.charValue2{
+    font-family: 'Oswald', sans-serif;
+    margin: 0 auto;
+    text-align: center;
+    color: white;
 }
 .image{
     margin-left: 10px;
